# Orthonx_AI

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  test_api_with_heatmap.html
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 01d2ddb9bfa3_add_public_id_column_to_diagnosisrecord.py  218f441939c3_add_url_s_fields_for_diagnosis_records.py  452d68d324a1_remove_not_null_constraints_from_email.py  5b579632ab5c_add_diagnosis_record_user_relationship_.py  8e403fc34aff_add_oauth_model.py  ab7edb1a6ef5_initial_migration_for_user_model.py  dce97f92b085_user_model_migration.py  fb3b72d1d895_remove_uuid_for_public_id.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: custom_auth.py  predict_fracture.py  prediction.py  test.py  yolo_with_gradcam.py
app/core/: config.py
app/database/: base.py  session.py
app/ml_models/: load_model.py
app/models/: users.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: cnn.py  predict_fracture.py  prediction.py  user_services.py  yolo_with_gradcam.py
app/templates/: reset_password.html  verify_failed.html  verify_success.html
app/users/: dependencies.py  manager.py
app/utils/: cloudinary_utils.py  gradcam.py  load_models.py  load_yolo.py  logging_utils.py  mail_config.py  users.py
app/workers/: celery_app.py  tasks.py  yolo_tasks.py
docker/: Dockerfile
